# romanisim

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Imviz.ipynb  JenkinsfileRT  JenkinsfileRT_dev  LICENSE  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements-min.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  cancel_workflows.yml  ci.yml  ci_cron.yml  data.yml  download_data.yml  retrieve_cache.yml  tests.yml  tests_extra.yml
data/: README.md
data/CoronagraphInstrument/CoronagraphParameters/: IWA_OWA_AnnularSizes.yaml  README.md
data/CoronagraphInstrument/Filters/: EngineeringFilters.yaml  NeutralDensityFilters.yaml  PrimaryFilters.yaml  README.md
data/CoronagraphInstrument/Imaging/: README.md
data/CoronagraphInstrument/Polarimetry/: PolarimetryProperties.yaml
data/CoronagraphInstrument/Spectroscopy/: SpectroscopyProperties.yaml
data/Observatory/MissionandObservatoryTechnicalOverview/: MissionandObservatory.yaml  README.md
data/Observatory/RollAngles/: README.md  nominal_roll_angles_dec_1_Sun_SASS.ecsv
data/Observatory/Visibility/: test_tgt_vis2.py
data/WideFieldInstrument/: README.md
data/WideFieldInstrument/Imaging/: README.md
data/WideFieldInstrument/Imaging/Backgrounds/: README.md  internal_thermal_backgrounds.ecsv
data/WideFieldInstrument/Imaging/BandEdges/: README.md
data/WideFieldInstrument/Imaging/EffectiveAreas/: README.md  Roman_effarea_v8_SCA03_20240301.ecsv
data/WideFieldInstrument/Imaging/PointSpreadFunctions/: README.md
data/WideFieldInstrument/Imaging/Sensitivity/: README.md
data/WideFieldInstrument/Imaging/ZeroPoints/: README.md
data/WideFieldInstrument/Spectroscopy/: README.md
data/WideFieldInstrument/Spectroscopy/Backgrounds/: README.md
data/WideFieldInstrument/Spectroscopy/BandEdges/: README.md  WFI_grism_edge_wavelengths.ecsv
data/WideFieldInstrument/Spectroscopy/Dispersion/: README.md
data/WideFieldInstrument/Spectroscopy/PrismGrismSummary/: README.md  grism_prism_parameters.ecsv
data/WideFieldInstrument/Spectroscopy/Sensitivity/: README.md
data/WideFieldInstrument/Spectroscopy/ZodiacalLight/: grism_prism_zodiacal_light.ecsv
docs/: api.rst  conf.py  index.rst  rtd_environment.yaml
docs/romanisim/: apt.rst  bandpass.rst  catalog.rst  changes.rst  image-input.rst  image.rst  install.rst  l1.rst  l2.rst  l3.rst  overview.rst  parameters.rst  psf.rst  refs.rst  running.rst  util.rst  wcs.rst
docs/wfisim/: package_index.rst
regtest/: test_l1.py
romanisim/: __init__.py  apt.py  bandpass.py  catalog.py  conftest.py  cr.py  gaia.py  image.py  l1.py  l3.py  nonlinearity.py  parameters.py  persistence.py  psf.py  ramp.py  ramp_fit_casertano.c  ramp_fit_casertano.pyx  ris_make_utils.py  util.py  velocity_aberration.py  wcs.py
romanisim/data/: README.md  cat-97599.fits  gaia-270-66-2027-06-01.ecsv
romanisim/data/Roman_effarea_tables_20240327/: Roman_effarea_v8_SCA01_20240301.ecsv  Roman_effarea_v8_SCA02_20240301.ecsv  Roman_effarea_v8_SCA03_20240301.ecsv  Roman_effarea_v8_SCA04_20240301.ecsv  Roman_effarea_v8_SCA05_20240301.ecsv  Roman_effarea_v8_SCA06_20240301.ecsv  Roman_effarea_v8_SCA07_20240301.ecsv  Roman_effarea_v8_SCA08_20240301.ecsv  Roman_effarea_v8_SCA09_20240301.ecsv  Roman_effarea_v8_SCA10_20240301.ecsv  Roman_effarea_v8_SCA11_20240301.ecsv  Roman_effarea_v8_SCA12_20240301.ecsv  Roman_effarea_v8_SCA13_20240301.ecsv  Roman_effarea_v8_SCA14_20240301.ecsv  Roman_effarea_v8_SCA15_20240301.ecsv  Roman_effarea_v8_SCA16_20240301.ecsv  Roman_effarea_v8_SCA17_20240301.ecsv  Roman_effarea_v8_SCA18_20240301.ecsv
romanisim/data/roman-technical-information/: CODEOWNERS.txt  CONTRIBUTING.md  LICENSE  README.md
romanisim/data/roman-technical-information/data/: README.md
romanisim/data/roman-technical-information/data/CoronagraphInstrument/: README.md
romanisim/data/roman-technical-information/data/Observatory/: README.md
romanisim/data/roman-technical-information/data/WideFieldInstrument/: README.md  WFI_overview.yaml
romanisim/models/: __init__.py  _util.py  backgrounds.py  bandpass.py  dark_current.py  example_APIs.ipynb  gain.py  ipc.py  nonlinearity.py  parameters.py  psf.py  psf_utils.py  read_noise.py  saturation.py  wcs.py  wcs_utils.py
romanisim/regtest/: conftest.py  regtestdata.py  test_l1.py
romanisim/tests/: conftest.py  dms_requirement_tests.json  test_bandpass.py  test_catalog.py  test_cr.py  test_dark_decay.py  test_dms_requirements.py  test_gaia.py  test_image.py  test_l1.py  test_l3.py  test_linear.py  test_models.py  test_persistence.py  test_psf.py  test_ramp.py  test_requirements.py  test_ris_make_utils.py  test_util.py  test_wcs.py
romanisim/tests/test_data/: chris_comparison.txt
scripts/: gaia_cat.py  ris_make_utils.py  romancal_make_all_l1s.sh  romancal_make_l1_data_files.sh  romancal_make_regtest_l1s.sh  romanisim-gaia-catalog  romanisim-make-catalog  romanisim-make-image  romanisim-make-l3  romanisim-make-stack  romanisim-make-test-image
src/romanisim/: __init__.py  apt.py  bandpass.py  catalog.py  image.py  l1.py  parameters.py  psf.py  util.py  wcs.py
src/romanisim/data/: Roman_effarea_20201130.csv
src/wfisim/: apt.py  wcs.py
(+89 files in other folders)
