[metadata]
name = romanisim
description = Roman WFI Simulator
long_description = Nancy Grace Roman Space Telescope WFI Simulator
long_description_content_type = text/plain
author = ROMANISIM Develeopers
license = BSD-3-Clause
url = https://github.com/spacetelescope/romanisim
project_urls =
    Tracker = https://github.com/spacetelescope/romanisim/issues
    Documentation = https://romanisim.readthedocs.io/en/stable/
    Source Code = https://github.com/spacetelescope/romanisim
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
		Programming Language :: Python :: 3.9

[options]
zip_safe = False
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    astropy>=5.0.4
    asdf>=2.9.2
    crds>=10.3.1
    gwcs>=0.16.1
    jsonschema>=3.0.2
    galsim>=2.3
    romancal>=0.7

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme
    sphinx-astropy
    sphinx-asdf>=0.1.1
test =
    ci-watson>=0.3.0
    colorama>=0.4.1
    getch>=1.0.0
    pytest>=4.6.0
		pytest-openfiles>=0.5.0
		pytest-doctestplus>=0.10.0
		pytest-cov>=2.9.0
    codecov>=1.6.0
    flake8>=3.6.0

[build-sphinx]
    source-dir = docs
    build-dir = docs
    all_files = 1

[upload_docs]
    upload-dir = docs/_build/html
    show-response = 1

[flake8]
select = F, W, E, C
# We should set max line length lower eventually
max-line-length = 130
exclude =
    docs,
    .tox,
    .eggs,
    build
[tool:pytest]
minversion = 4.6
norecursedirs =
    docs/_build
    docs/exts
    scripts
    .tox
doctest_plus = enabled
doctest_rst = enabled

[coverage:run]
omit =
    romanisim/conftest.py
    romanisim/setup.py
    romanisim/tests/test*
    docs/*
    # And list these again for running against installed version
    */romanisim/conftest.py
    */wfism/setup.py
    */romanisim/tests/test*
    */romanisim/regtest/test*
    */romanisim/*/tests/*
    */docs/*

[coverage:report]
exclude_lines =
    pragma: no cover
    if self.debug:
    except ImportError
    raise AssertionError
    raise NotImplementedError
    if __name__ == '__main__':
